--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -41,7 +41,8 @@
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.0",
-    "zustand": "^4.4.7"
+    "zustand": "^4.4.7",
+    "serve": "^14.2.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
