feat: Add Business Setup Wizard and fix dashboard loading issue

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,6 +16,7 @@
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
     "seed": "tsx src/scripts/seed.ts",
+    "seed:archetypes": "tsx src/scripts/seed-archetypes.ts",
     "db:migrate": "tsx src/scripts/migrate.ts"
   },
   "dependencies": {
