feat: Add multi-state business filing portal with interactive US map selector

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -25,6 +25,11 @@
       "import": "./dist/constants/index.mjs",
       "require": "./dist/constants/index.js",
       "types": "./dist/constants/index.d.ts"
+    },
+    "./registries": {
+      "import": "./dist/registries/index.mjs",
+      "require": "./dist/registries/index.js",
+      "types": "./dist/registries/index.d.ts"
     }
   },
   "scripts": {
