--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -31,6 +31,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "uuid": "^9.0.1",
     "zod": "^3.22.0"
   },
@@ -42,12 +43,12 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.0",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.8",
     "@vitest/coverage-v8": "^1.2.0",
+    "esbuild": "^0.20.0",
     "eslint": "^8.56.0",
     "supertest": "^6.3.4",
-    "@types/supertest": "^6.0.2",
-    "esbuild": "^0.20.0",
     "tsx": "^4.7.0",
     "typescript": "^5.3.0",
     "vitest": "^1.2.0"
