--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,6 +40,7 @@
     "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.21.2",
     "react-simple-maps": "^3.0.0",
+    "recharts": "^3.7.0",
     "serve": "^14.2.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
