--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "change-platform",
   "version": "0.1.1",
   "private": true,
+  "packageManager": "npm@10.2.0",
   "description": "CHANGE Platform - Business Formation & Advisory System",
   "workspaces": [
     "apps/*",
